# sp1-aggregation-example

./: Cargo.toml
aggregation/program/: Cargo.toml
aggregation/program/elf/: riscv32im-succinct-zkvm-elf
aggregation/script/: Cargo.toml  build.rs
aggregation/script/src/: main.rs
fibonacci/program/: Cargo.toml
fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
fibonacci/script/: Cargo.toml
