[package]
name = "fibonacci-script"
version = "1.1.1"
edition = "2021"
default-run = "fibonacci-script"
publish = false

[dependencies]
itertools = "0.12.1"
sp1-sdk = { version = "1.1.1"}
sha2 = "0.10.8"

[build-dependencies]
sp1-build = "1.1.1"
sp1-helper = "1.1.1"

[[bin]]
name = "plonk_bn254"
path = "bin/plonk_bn254.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "fibonacci-script"
path = "src/main.rs"